Mudando chamada do start()

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- jogador -->
             <!-- div fundoGame !-->
 
-            <div id="inicio">
+            <div id="inicio" onclick="start()">
                 <h1> Resgate </h1> <!-- div inicio !-->
                 <p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero
                     para baixo e a tecla D para atirar.</p>
